<resources>
    <string name="app_name">Android Geeks</string>
    <string name="title_activity_main">Android Geeks</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_API">API</string>
    <string name="navigation_add">New Post</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">don\'t have an account? signup right now</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="login_failed">LOGIN FAILED !!!</string>
    <string name="login_successful">LOGIN SUCCESSFUL</string>
    <string name="soon">soon.....</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="success_toast">Success</string>
    <string name="failure_toast">Failure</string>
    <string name="add_post_successful">add the post Successful</string>
    <string name="fill_the_field">Must fill all the field</string>
    <!--  445-->
    <string name="logged_in">logged in</string>
    <string name="soon_toast">soon</string>
    <string name="you_must_sign_toast">you must sign in first</string>
    <string name="login_successfully_toast">Login Successfully</string>
    <string name="login_not_successfully_toast">the password or the email are wrong</string>
    <string name="your_blog">Your blog</string>
    <string name="delete_user_toast_successful">Delete User Successfully</string>
    <string name="delete_user_toast_un_successful">There is problem</string>
    <string name="sign_out_toast">sign Out</string>
    <string name="comment_comment_fragment">comment</string>
    <string name="posts_profile">Posts</string>
    <string name="user_name_profile">User</string>
    <string name="profile_switch">Switch</string>
    <string name="like_profile">Like</string>
    <string name="sign_out_button_profile">Sign out</string>
    <string name="i_don_t_have_an_account_login">I don\'t have an account</string>
    <string name="finger_print_button">finger Print</string>
    <string name="authentication_is_required_finger">Authentication is required</string>
    <string name="uses_fingerprint_finger">this app uses fingerprint protection to help you</string>
    <string name="cancel_finger">Cancel</string>
    <string name="authentication_cancelled_finger">Authentication cancelled</string>
    <string name="authentication_has_not_been_enabled">Fingerprint Authentication has not been enabled in settings</string>
    <string name="finger_printy">Fingerprint Authentication permission in not enable</string>
    <string name="you_must_accept_the_terms">\"You must accept the terms \"</string>
    <string name="please_fill_all_the_filed">please fill all the filed</string>
    <string name="confirm_password">\"The Confirm Password does not match The Password \"</string>
    <string name="confirm_emai">\"The Confirm Email does not match The Email \"</string>
    <string name="signup">signUp</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="password_p">passowrd</string>
    <string name="confirmpassword">confirmPassword</string>
    <string name="i_agree_for_the_terms">I agree for the terms</string>
    <string name="signup">signUp</string>
    <string name="already_user_login">already user? Login</string>
    <string name="already_have_user_login">already have user? Login</string>
    <string name="new_post">NEW POST</string>


</resources>