<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tuwaiq.AndroidGeeks.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_newPostFragment"
            app:destination="@id/navigation_add" />
        <action
            android:id="@+id/action_navigation_home_to_postFragment"
            app:destination="@id/postFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tuwaiq.AndroidGeeks.ui.dashboard.DashboardFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home2"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tuwaiq.AndroidGeeks.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.tuwaiq.AndroidGeeks.newpost.NewPostFragment"
        tools:layout="@layout/new_post_fragment">
        <action
            android:id="@+id/action_newPostFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>
    <fragment
        android:id="@+id/postFragment"
        android:name="com.tuwaiq.AndroidGeeks.PostFragment"
        android:label="PostFragment" >
        <argument
            android:name="dataPost"
            app:argType="com.tuwaiq.AndroidGeeks.database.Post.Posts" />
        <action
            android:id="@+id/action_postFragment_to_commentFragment"
            app:destination="@id/commentFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.tuwaiq.AndroidGeeks.login.LoginFragment"
        android:label="LoginFragment" >
        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />
    </fragment>
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.tuwaiq.AndroidGeeks.signup.SignupFragment"
        android:label="SignupFragment" >
        <action
            android:id="@+id/action_signupFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/commentFragment"
        android:name="com.tuwaiq.AndroidGeeks.comment.CommentFragment"
        android:label="comment_fragment"
        tools:layout="@layout/comment_fragment" >
        <argument
            android:name="dataComment"
            app:argType="com.tuwaiq.AndroidGeeks.database.comments.Comments" />
    </fragment>
</navigation>